syntax = "proto3";

package sync;

message QueryRequest {
  string queryId = 1; // Changed from 'sql' to 'queryId' to match your code
}

message QueryResponse {
  bool success = 1;
  string message = 2;
  string resultJson = 3;
}

service SyncService {
  rpc ExecQueryFromLoadBalancer(QueryRequest) returns (QueryResponse);
}
